Fix the spacing of members

--- a/projects/commudle-admin/src/app/feature-modules/public-community/components/members/members.component.scss
+++ b/projects/commudle-admin/src/app/feature-modules/public-community/components/members/members.component.scss
@@ -2,42 +2,50 @@
 
 nb-card {
   margin: 0 0 $space-16 0;
+  padding: $space-40;
+  border: none;
   nb-card-body {
-    padding: 0 0 $space-80 0;
+    padding: 0;
   }
 }
 
 .header-text {
   color: $gunmetal;
   max-width: fit-content;
-  margin: $space-40 0 0 $space-40;
+  margin: 0 0 0 $space-16;
   font-size: $fs-26;
   font-weight: $fw-600;
   line-height: 30px;
 }
 
 .users {
+  flex-direction: row;
   margin-top: $space-24;
+  gap: $space-26;
 
   .user-container {
     border-right: 1px solid $silver-sand;
-    padding: 0 $space-8;
-    margin: 0 $space-8 $space-32 $space-8;
-
-    .user {
-      padding: $space-16 0;
-    }
-  }
-  .user-container:nth-child(3n),:last-child {
-    border: none;
-  }
-
-  @media screen and (min-width: $tab-width) {
-    flex-direction: row;
-    flex-wrap: wrap;
+    padding: 0 $space-25 0 0;
+    margin: 0;
 
     .user {
       width: 264px;
+      padding: $space-16 0 $space-16 $space-16;
+    }
+  }
+  .user-container:nth-child(3n),:last-child {
+    padding: 0;
+    border: none;
+  }
+
+  @media screen and (max-width: $tab-width) {
+    .user-container:nth-child(3n) {
+      border-right: 1px solid $silver-sand;
+      padding-right: $space-24;
+    }
+    .user-container:nth-child(2n),:last-child {
+      padding: 0;
+      border: none;
     }
   }
 
@@ -49,6 +57,7 @@ nb-card {
 }
 
 .load-more {
+  margin-top: $space-32;
   text-align: center;
 }
 
